--- a/package.json
+++ b/package.json
@@ -9,12 +9,24 @@
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.0",
     "@react-router/node": "^7.5.0",
     "@react-router/serve": "^7.5.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "firebase": "^11.6.0",
     "isbot": "^5.1.17",
+    "lucide": "^0.488.0",
+    "lucide-react": "^0.487.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router": "^7.5.0"
+    "react-router": "^7.5.0",
+    "react-spinners": "^0.16.1",
+    "recharts": "^2.15.2",
+    "socket.io-client": "^4.8.1",
+    "tailwind-merge": "^3.2.0",
+    "tw-animate-css": "^1.2.5"
   },
   "devDependencies": {
     "@react-router/dev": "^7.5.0",
